--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest",
+		"test": "node --experimental-vm-modules node_modules/.bin/jest --watchAll",
 		"start": "node index.js",
 		"dev": "nodemon index.js"
 	},
@@ -17,11 +17,15 @@
 		"debug": "^4.3.4",
 		"express": "^4.18.2",
 		"helmet": "^7.1.0",
+		"joi": "^17.11.0",
+		"mongodb-memory-server": "^9.1.1",
 		"mongoose": "^8.0.2",
 		"morgan": "^1.10.0",
 		"nodemon": "^3.0.2"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.23.5",
+		"babel-jest": "^29.7.0",
 		"jest": "^29.7.0"
 	}
 }
