--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"config": "^3.3.9",
 		"debug": "^4.3.4",
 		"express": "^4.18.2",
