--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"express": "^4.18.2",
 		"helmet": "^7.1.0",
 		"joi": "^17.11.0",
+		"joi-objectid": "^4.0.2",
 		"mongoose": "^8.0.2",
 		"morgan": "^1.10.0"
 	},
