--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"bcrypt": "^5.1.1",
 		"config": "^3.3.9",
 		"express": "^4.18.2",
+		"express-async-handler": "^1.2.0",
 		"helmet": "^7.1.0",
 		"joi": "^17.11.0",
 		"joi-objectid": "^4.0.2",
