--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 		"helmet": "^7.1.0",
 		"joi": "^17.11.0",
 		"joi-objectid": "^4.0.2",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.2",
 		"morgan": "^1.10.0"
 	},
