--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"config": "^3.3.9",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"helmet": "^7.1.0",
